--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angular-Webpack Starter</title>
     <base href="/">
+    <link href="/Content/bundle/styles.css" rel="stylesheet">
+
 </head>
-<body>
-    <h1>Angular-Webpack Starter</h1>
+<body class="text-gray-800 bg-gray-100">
+    <h1 class="text-3xl font-black">Angular-Webpack Starter</h1>
     <app-root></app-root>
+
     <script src="Content/bundle/vendor.bundle.js"></script>
     <script src="Content/bundle/portal.bundle.js"></script>
 </body>
