minor change to index html file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angular-Webpack Starter</title>
     <base href="/" />
-    <link href="/Content/bundle/styles.css" rel="stylesheet" />
-
+    <link rel="stylesheet"
+      type="text/css"
+      href="Content/bundle/styles.css" />
 </head>
 <body class="text-gray-800 bg-gray-100">
     <h1 class="text-3xl font-black">Angular-Webpack Starter</h1>
